# defcon

./: .gitignore  .tool-versions  01-introduction.html  02-getting-started.html  03-configuration.html  04-runner.html  05-alerters.html  05-checks.html  06-groups.html  06-handlers.html  07-alerters.html  07-handlers.html  08-alerters.html  404.html  Cargo.toml  LICENSE  README.md  api.html  index.html  justfile  print.html  searchindex.js  searchindex.json
.github/workflows/: test.yml  tip.yml
06-handlers/: appstores.html  deadmanswitch.html  dns.html  http.html  ping.html  tcp.html  tls.html  udp.html  whois.html
07-handlers/: appstores.html  deadmanswitch.html  dns.html  http.html  ping.html  python.html  tcp.html  tls.html  udp.html  whois.html
assets/: .eslintrc.js  index.pug  package.json  vue.config.js  webpack.config.dev.js  webpack.config.js
assets/css/: app.scss  colors.scss
assets/js/: app.js  router.js
assets/js/components/: App.vue  filters.js  helpers.js
assets/js/components/alerters/: Alerters.vue  Form.vue
assets/js/components/checks/: Attribute.vue  Check.vue  Checks.vue  Form.vue  Spec.vue
assets/js/components/checks/forms/: AppStore.vue  DeadManSwitch.vue  Dns.vue  Http.vue  Ping.vue  PlayStore.vue  Python.vue  Tcp.vue  Tls.vue  Udp.vue  Whois.vue
assets/js/components/checks/specs/: AppStore.vue  DeadManSwitch.vue  Dns.vue  Http.vue  Ping.vue  PlayStore.vue  Python.vue  (+4 more)
assets/js/components/dashboard/: Dashboard.vue  Status.vue  Timeline.vue
assets/js/components/groups/: Form.vue  Groups.vue
assets/js/components/outages/: Events.vue  History.vue  Outage.vue  Outages.vue  Row.vue
assets/js/components/partials/: CustomSelect.vue  ListFilter.vue  Menu.vue
assets/src/: main.js  router.js  store.js
assets/src/components/: App.vue  Dispatch.vue  PublicApp.vue  helpers.js  validators.js
assets/src/components/alerters/: Alerters.vue  Form.vue
assets/src/components/checks/: Attribute.vue  Check.vue  Checks.vue  Form.vue  Spec.vue
assets/src/components/dashboard/: Dashboard.vue  Status.vue  Timeline.vue
assets/src/components/groups/: Form.vue  Groups.vue
assets/src/components/login/: Form.vue  Settings.vue
assets/src/components/outages/: Events.vue  History.vue  Outage.vue  Outages.vue  Row.vue  Timeline.vue
assets/src/components/partials/: Field.vue  Sidenav.vue
assets/src/components/session/: Form.vue  Settings.vue
assets/src/components/status/: StatusPage.vue  Timeline.vue
assets/src/components/users/: Form.vue  Users.vue
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/checks/: display.rs  mod.rs
defcon/src/: config.rs  stash.rs
defcon/src/alerters/: slack.rs
defcon/src/api/: alerters.rs  checks.rs  runner.rs
defcon/src/api/types/: check.rs  date.rs  query.rs  report.rs  site_outage.rs  spec.rs
defcon/src/handlers/: app_store.rs  deadmanswitch.rs  dns.rs  mod.rs  ping.rs  tcp.rs  tls.rs  whois.rs
defcon/src/model/: alerter.rs  binary.rs  check.rs  deadmanswitch_log.rs  event.rs  outage.rs  site.rs  site_outage.rs
defcon/src/model/migrations/: V1__initial_schema.sql  V2__add_http_json.sql  V3__add_deadmanswitch.sql  V4__add_groups.sql
defcon/src/model/specs/: deadmanswitch.rs  tls.rs  udp.rs  whois.rs
defcon/src/tests/: checks.rs  db.rs  groups.rs  mod.rs
docs/: .gitignore  book.toml
docs/api/: openapi.yml
docs/api/models/: alerter.yml  check.yml  group.yml  outage.yml  site_outage.yml  status.yml
docs/api/models/specs/: _index.yml  app_store.yml  dns.yml  http.yml  ping.yml  play_store.yml  python.yml  tcp.yml  tls.yml  udp.yml  whois.yml
docs/src/: 01-introduction.md  02-getting-started.md  03-configuration.md  04-runner.md  05-checks.md  06-groups.md  07-alerters.md  07-handlers.md  SUMMARY.md
docs/src/06-handlers/: deadmanswitch.md  dns.md  http.md  tcp.md  tls.md  whois.md
docs/src/07-handlers/: appstores.md  deadmanswitch.md  python.md  tcp.md  udp.md
docs/src/handlers/: appstore.md  appstores.md  http.md  ping.md  playstore.md  tls.md  udp.md  whois.md
examples/schemas/: slack.json  webhook.json
examples/schemas/checks/: app_store.json  dns.json  domain.json  http.json  ping.json  play_store.json  tcp.json  tls.json  udp.json
handlers/: appstore.html  appstores.html  dns.html  http.html  ping.html  playstore.html  tcp.html  tls.html  udp.html  whois.html
src/: cleaner.rs  config.rs  defcon.rs  ext.rs  inhibitor.rs  lib.rs  main.rs  spec.rs  stash.rs
src/alerters/: mod.rs  pagerduty.rs  slack.rs  webhook.rs
src/api/: alerters.rs  checks.rs  error.rs  events.rs  groups.rs  middlewares.rs  mod.rs  outages.rs  runner.rs  session.rs  site_outages.rs  status.rs  timeline.rs  users.rs
src/api/auth/: authorization.rs  mod.rs  runner.rs  user.rs
src/api/types/: alerter_kind.rs  binary.rs  check.rs  check_kind.rs  date.rs  dns_record.rs  duration.rs  mod.rs  outage.rs  query.rs  report.rs  site.rs  site_outage.rs  spec.rs  status.rs  timeline.rs  user.rs
src/handlers/: app_store.rs  deadmanswitch.rs  dns.rs  http.rs  mod.rs  ping.rs  play_store.rs  python.rs  tcp.rs  tls.rs  udp.rs  whois.rs
src/model/: alerter.rs  alerter_kind.rs  binary.rs  check.rs  check_kind.rs  deadmanswitch_log.rs  duration.rs  event.rs  group.rs  mod.rs  outage.rs  site.rs  site_outage.rs  timeline.rs  user.rs
src/model/migrations/: V10__generalize_alerters.sql  V11__create_timelines.sql  V12__remove_outage_comment.sql  V13__check_on_status_page.sql  V14__create_acknowledgement.sql  V15__add_down_duration.sql  V16__add_http_duration.sql  V1__initial_schema.sql  V3__add_deadmanswitch.sql  V5__add_webhook_auth.sql  V6__add_alerters_name.sql  V7__add_python.sql  V8__create_users.sql  V9__add_api_key.sql  mod.rs
src/model/specs/: app_store.rs  deadmanswitch.rs  mod.rs  ping.rs  play_store.rs  python.rs  tcp.rs  tls.rs  udp.rs  unsupported.rs  whois.rs
src/model/specs/dns/: mod.rs  record.rs  spec.rs
src/model/specs/http/: headers.rs  spec.rs
src/runner/: README.md  main.rs
src/tests/: alerters.rs  checks.rs  db.rs  mod.rs  outages.rs  users.rs
src/web/: frontend.rs  mod.rs
(+23 files in other folders)
