[package]
name = "defcon"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine@popineau.eu>"]
edition = "2021"

default-run = "defcon"

[[bin]]
name = "defcon"
path = "src/bin/controller/main.rs"

[[bin]]
name = "defcon-runner"
path = "src/bin/runner/main.rs"

[features]
web = ["rust-embed"]
ping = ["surge-ping"]
jq = ["jq-rs"]
python = ["pyo3"]

[dependencies]
anyhow = "^1.0"
argon2 = "^0.4"
async-trait = "^0.1"
axum = { version = "0.6.1", features = ["macros", "headers"] }
base64 = "^0.20"
caps = "^0.5"
chrono = { version = "^0.4", default_features = false, features = ["serde"] }
dns-lookup = "^1.0"
extend = "^1.0"
futures = "^0.3"
humantime = "^2.1"
jsonwebtoken = "^8.1"
kvlogger = { version = "^0.5", features = ["datetime"] }
log = "*"
new_mime_guess = "4.0.1"
once_cell = "1.9.0"
pagerduty-rs = "0.1.6"
pulldown-cmark = "0.9.2"
rand = "^0.8"
refinery = { version = "^0.8", features = ["mysql"] }
regex = "^1.0"
reqwest = { version = "^0.11", features = ["json"] }
serde = "^1.0"
serde_json = "^1.0"
sha2 = "^0.10"
slack-hook = "^0.8"
sqlx = { version = "^0.6", default_features = false, features = ["macros", "mysql", "runtime-tokio-rustls", "chrono", "all-types"] }
ssl-expiration2 = "^0.4"
thiserror = "^1.0"
time = "^0.3.11"
tokio = { version = "^1.2", default_features = false, features = ["macros", "time", "net"] }
trust-dns-client = { version = "^0.22", default_features = false }
uuid = { version = "^1.1", features = ["v4"] }
whois2 = "^0.0.1"

jq-rs = { version = "0.4", optional = true }
rust-embed = { version = "^6.4", optional = true }
surge-ping = { version = "^0.7", optional = true }
pyo3 = { version = "0.15.2", features = ["auto-initialize"], optional = true }

[dev-dependencies]
hyper = "0.14.23"
serial_test = "0.10"
tower = "0.4.13"
url = "^2.2"
