[package]
name = "defcon"
version = "0.1.0"
authors = ["Antoine POPINEAU <antoine@popineau.eu>"]
edition = "2021"

default-run = "defcon"

[[bin]]
name = "defcon"
path = "src/bin/controller/main.rs"

[[bin]]
name = "defcon-runner"
path = "src/bin/runner/main.rs"

[features]
web = ["rust-embed", "new_mime_guess"]
ping = ["surge-ping", "caps"]
jq = ["jq-rs"]
python = ["pyo3"]

[dependencies]
anyhow = "^1.0"
argon2 = "^0.5"
async-trait = "^0.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "^0.10.0", features = ["typed-header"] }
base64 = "^0.22"
chrono = { version = "^0.4", default-features = false, features = ["serde"] }
extend = "^1.0"
futures = "^0.3"
humantime = "^2.1"
jsonwebtoken = "^9.1"
kvlogger = { version = "^0.5", features = ["datetime"] }
log = "*"
once_cell = "1.9.0"
pagerduty-rs = "0.1.6"
pulldown-cmark = "0.12.2"
rand = "^0.8"
refinery = { version = "^0.8", features = ["mysql"] }
serde = "^1.0"
serde_json = "^1.0"
sha2 = "^0.10"
slack-hook = "^0.8"
sqlx = { version = "^0.8", default-features = false, features = [
  "macros",
  "mysql",
  "runtime-tokio-rustls",
  "chrono",
  "json",
] }
ssl-expiration2 = "^0.4"
thiserror = "^2.0"
time = "^0.3.11"
tokio = { version = "^1.2", default-features = false, features = [
  "macros",
  "time",
  "net",
] }
hickory-client = { version = "^0.24", default-features = false }
ureq = { version = "^2.6", features = ["json"] }
uuid = { version = "^1.1", features = ["v4"] }
whois2 = "^0.0.1"
caps = { version = "^0.5", optional = true }
jq-rs = { version = "0.4", optional = true }
new_mime_guess = { version = "4.0.1", optional = true }
pyo3 = { version = "0.23.3", features = ["auto-initialize"], optional = true }
rust-embed = { version = "^8.0", optional = true }
surge-ping = { version = "^0.8", optional = true }

[dev-dependencies]
http-body-util = "0.1.0"
hyper = "1.0.1"
serial_test = "^3.0"
tower = "0.5.2"
url = "^2.2"
